Upgrade new UI and new api routers
